# LenKinVerse

./: .gitignore  Design.md  ELEMENT_TOKEN_FLOW.md  PROJECT_COMPLETE.md  README.md  REBRANDING_SUMMARY.md  SOLANA_PLANET_TODO.md  Solana_market_maker.md  Sui_vision.md  Summary1.md  Vision_v1.md
backend/: .env.example  .gitignore  README.md  database-schema.sql  db-helper.sh  package.json
backend/src/: index.ts
docs/: ELEMENTS_AND_REACTIONS.md  README.md  SOLANA_PLUGIN_IMPLEMENTATION.md  SOLANA_PLUGIN_SPEC.md  SOLANA_WORLD_STATUS.md
docs/backend/: IMPLEMENTATION_FIXES.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.md
docs/health/: HEALTH_API_SETUP.md  HEALTH_PLUGIN_SUMMARY.md  HEALTH_TO_GAME_DATA_FORMULA.md
docs/mobile/: ALSOL_MARKETPLACE_UPDATE.md  GODOT_UI_UPDATE_GUIDE.md  UI_CUSTOMIZATION_GUIDE.md
godot-mobile/: .gitignore  README.md  project.godot
godot-mobile/assets/: RARITY_CONFIG.md  README.md  USAGE_EXAMPLES.md  asset_config.json  rarity_config.json
godot-mobile/autoload/: announcement_manager.gd  announcement_manager.gd.uid  asset_manager.gd  asset_manager.gd.uid  discovery_manager.gd  discovery_manager.gd.uid  game_manager.gd  game_manager.gd.uid  (+12 more)
landing-page/: DEPLOYMENT.md  README.md  REBRAND_COMPLETE.md  STATUS.md  index.html  loading.html
solana-contracts/: .gitignore  ALSOL_ARCHITECTURE.md  ALSOL_FINAL_ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  Anchor.toml  CONTRACT_STATUS.md  Cargo.toml  DEPLOYMENT_READY.md  ECONOMIC_MODEL.md  HIGH_PRIORITY_FEATURES.md  PRICE_ORACLE.md  README.md
solana-contracts/programs/element_token_factory/: Cargo.toml
solana-contracts/programs/element_token_factory/src/: lib.rs
solana-contracts/programs/item_marketplace/: Cargo.toml
solana-contracts/programs/item_marketplace/src/: lib.rs
solana-contracts/programs/treasury_bridge/: Cargo.toml
solana-contracts/programs/treasury_bridge/src/: lib.rs
solana-program/: .gitignore  ALSOL_TOKEN.md  Anchor.toml  Cargo.toml  ONCHAIN_REQUIREMENTS.md  README.md  package.json
solana-program/programs/element-nft/: Cargo.toml
solana-program/programs/element-nft/src/: lib.rs
(+87 files in other folders)
