[package]
name = "element-token-factory"
version = "0.1.0"
description = "Element Token Factory - Mints fungible SPL tokens for discovered elements"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "element_token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
