[package]
name = "item-marketplace"
version = "0.1.0"
description = "In-Game Item NFT Marketplace - P2P trading for gloves, isotopes, etc."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "item_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
