[package]
name = "treasury-bridge"
version = "0.1.0"
description = "Treasury Bridge - Governor manages treasury liquidity between in-game and on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury_bridge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
