[package]
name = "element-nft"
version = "0.1.0"
description = "LenKinVerse Element NFT Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "element_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.0"
